17.0.4
------


17.0.3
------
(RB=1173612)
Update MaskTree#getOperations method to handle array range attributes.

17.0.2
------
(RB=1172849)
Shutting down ssl channelPool and fixing race condition

17.0.1
------
(RB=1168627)
Re-enable delay tests with seeded randomHash
(RB=1171477)
Ensure publisher is set after zk connection is established

17.0.0
------

16.0.6
------
(RB=1161557)
Refactor DegraderLoadBalancerStrategyV3 class

16.0.5
------
(RB=1153256)
Integration tests for projecting array fields with specific ranges.

(RB=1155706)
Fix the DataTemplate generation issue on Gradle 4.3's modified OutputDirectory generation time.

16.0.4
------
(RB=1147537)
Logs request path only instead of the full URI

(RB=1154436)
Allows SslSessionNotTrustedException to be created with an inner exception and message

16.0.3
------
(RB=1148299)
Changes to specify array ranges while projecting fields.
(0) Update PathSpec to include attributes (start and count).
(1) Update Java DataTemplate codegen to generate field PathSpec methods for specifying array ranges.
(2) Update MaskComposition to take care of merging array ranges.

(RB=1139217)
Update URIMaskUtil is parse array ranges in URI fields projection and fix bugs in Filer and CopyFilter.

(RB=1148212)
Error out if zookeeper connection is not ready for markup/markdown

16.0.2
------
(RB=1048086)
Adding 'fast recovery' mode to help host recover in low QPS situation

16.0.1
------
(RB=1089940)
Adding a D2 LoadBalancer that reads always latest data from disk in parallel of the LoadBalancer toggling mechanism
in order to eventually deprecate it.
The user will be able to switch between the two.

16.0.0
------
(RB=1136651)
Support Async Interface for Unstructured Data and rename Unstructured Data resource classes

(RB=1126626)
Support Reactive Streaming for Unstructured Data

15.1.10
-------
(RB=1128480)
Fix the SchemaTranslator to translate array or map of union with aliases fields in the Pegasus schema.

15.1.9
-------
(RB=1108176)